--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.6.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.5.4",
+    "react-chartjs": "^0.8.0",
+    "react-chartjs-2": "^2.4.1",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
