--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.6.0",
+    "enzyme": "^2.9.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "react": "^15.5.4",
