--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-test-renderer": "^15.6.1",
     "redux": "^3.7.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0"
