--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "chart.js": "^2.6.0",
     "enzyme": "^2.9.1",
+    "history": "^4.6.3",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "react": "^15.5.4",
@@ -13,6 +14,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-test-renderer": "^15.6.1",
     "redux": "^3.7.0",
     "redux-devtools-extension": "^2.13.2",
