--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-chartjs": "^0.8.0",
     "react-chartjs-2": "^2.4.1",
     "react-dom": "^15.5.4",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
